# i-emic

./: .gitignore  CMakeLists.txt
examples/ocean/: .gitignore
examples/ocean/Idealized/: .gitignore  README.md  bif.m  fort.44  loca_params.xml  make_plots.m  num_figures.m  plot_ocean2.m  run.sh  run_matlab_post.sh  solver_params.xml.FROSch  solver_params.xml.MUMPS  solver_params.xml.block_precond  thcm_params.xml
examples/ocean/NorthAtlantic/: README.md
examples/ocean/NorthAtlantic/Step1/: loca_params.xml  solver_params.xml  thcm_params.xml
examples/ocean/Transient/: ocean_params.xml  ocean_preconditioner_params.xml  timestepper_params.xml
matlab/: bstream.m  plot_ocean.m  readhdf5.m
parameterfiles/NorthAtlantic/: continuation_params.xml  ocean_params.xml  ocean_preconditioner_params.xml  ocean_preconditioner_params_SLU.xml  ocean_preconditioner_params_simple.xml
params-ocean-frosch/: ocean_preconditioner_params.xml
run/hymls/: continuation_params.xml  ocean_params.xml  ocean_preconditioner_params.xml  solver_params.xml
run/ocean/: ocean_preconditioner_params.xml
src/: CMakeLists.txt
src/atmosphere/: CMakeLists.txt
src/coupledmodel/: CMakeLists.txt
src/dependencygrid/: CMakeLists.txt
src/globaldefs/: CMakeLists.txt  GlobalDefinitions.H.in
src/main/: CMakeLists.txt  run_ocean.C  run_ocean_loca.C
src/mrilucpp/: CMakeLists.txt
src/ocean/: CMakeLists.txt  DefaultParams.C  DefaultParams.H  FROSchPreconditioner.cpp  Ocean.C  Ocean.H  OceanGrid.C  OceanGrid.H  OceanModel.C  OceanModel.H  OceanModelIO.C  OceanModelIO.H  OceanOutputXdmf.C  OceanOutputXdmf.H  Singleton.H  THCM.C  THCM.H  TRIOS_FROSchPreconditioner.cpp  TRIOS_FROSchPreconditioner.hpp  boundary.F90  fdefs.h  forcing.F90  global.F90  levitus.F90  mix_imp.f  usrc.F90
src/seaice/: CMakeLists.txt
src/transient/: AdaptiveTransient.H  CMakeLists.txt  Transient.cpp
src/trios/: CMakeLists.txt  NOX_Epetra_LinearSystem_Belos.C  NOX_Epetra_LinearSystem_Belos.H  THCMdefs.H  TRIOS_BlockPreconditioner.C  TRIOS_BlockPreconditioner.H  TRIOS_Domain.H  TRIOS_FROSchPreconditioner.C  TRIOS_FROSchPreconditioner.H  TRIOS_FROSchPreconditioner.cpp  TRIOS_FROSchPreconditioner.hpp  TRIOS_HYMLSBlockPreconditioner.C  TRIOS_HYMLSBlockPreconditioner.H  TRIOS_LinearSystem.C  TRIOS_LinearSystem.H  TRIOS_Macros.H  TRIOS_MatrixUtils.C  TRIOS_MatrixUtils.H  TRIOS_SolverFactory.C
src/utils/: CMakeLists.txt  MatrixUtils.C  MatrixUtils.H  Utils.C  my_f2c.H  ptr_types.H
